# ai-subtitle-tools

./: .gitignore  CLAUDE.md  README.md  README_EN.md
.github/workflows/: ci.yml  release.yml
app/: eslint.config.mjs  package-lock.json  package.json
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: asr_cache.rs  config.rs  ffmpeg.rs  file_ops.rs  funasr.rs  http.rs  lib.rs  qwen3_asr.rs
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/components/: AsrCacheModal.tsx  FilePicker.tsx  GlossaryPanel.tsx  LogPanel.tsx  LogTabs.tsx  ProgressBar.tsx  SettingsModal.tsx  SettingsPanel.tsx  SubtitlePreview.tsx  ThemeToggle.tsx  Tooltip.tsx
app/src/hooks/: useLog.ts  usePipeline.ts  useTheme.ts
app/src/i18n/: en.ts  index.ts  types.ts  zh.ts
app/src/lib/: aliyunAsr.ts  asrCache.ts  config.ts  debugLog.ts  ffmpeg.ts  ffmpegDetector.ts  funasr.ts  platform.ts  qwen3Asr.ts  subtitle.ts  subtitleSplitter.ts  translator.ts  types.ts
scripts/: bump-version.sh
services/: docker-compose.yml  manage.sh
