[package]
name = "ai-subtitle-tools"
version = "0.1.0"
description = "Cross-platform desktop tool for video subtitle generation and translation"
authors = ["LanceLRQ"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tokio = { version = "1", features = ["full"] }

[profile.release]
strip = true
lto = true
opt-level = "s"
codegen-units = 1
panic = "abort"
